두번째 코드 병합

--- a/src/views/main.ejs
+++ b/src/views/main.ejs
@@ -16,8 +16,6 @@
     <title>그냥 담아</title>
   </head>
   <body>
-    메인화면<br />
-    <a href="/user/login">로그인</a>
     <!-- 네이게이션 바 -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
@@ -61,6 +59,9 @@
                   <a class="dropdown-item" href="#">Something else here</a>
                 </li>
               </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/user/login">login</a>
             </li>
           </ul>
 
