메인페이지 MyPage버튼 수정

--- a/src/views/main.ejs
+++ b/src/views/main.ejs
@@ -34,13 +34,23 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <!-- me-auto -->
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <!-- 홈 버튼 -->
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
+
+            <!-- 체크리스트 버튼 -->
             <li class="nav-item">
               <a class="nav-link" href="#">CheckList</a>
             </li>
-            <li class="nav-item dropdown">
+
+            <!-- 마이페이지 버튼 -->
+            <li class="nav-item">
+              <a class="nav-link" href="#">MyPage</a>
+            </li>
+
+            <!-- 마이페이지 드롭다운 버튼 -->
+            <!-- <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
@@ -59,7 +69,7 @@
                   <a class="dropdown-item" href="#">Something else here</a>
                 </li>
               </ul>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="/user/login">login</a>
             </li>
