카테고리 1차 완성

--- a/src/views/main.ejs
+++ b/src/views/main.ejs
@@ -70,6 +70,8 @@
                 </li>
               </ul>
             </li> -->
+
+            <!-- 로그인 버튼 -->
             <li class="nav-item">
               <a class="nav-link" href="/user/login">login</a>
             </li>
@@ -171,7 +173,9 @@
             <h4 class="my-0 fw-normal">과일</h4>
           </div>
           <div class="card-body">
-            <img src="/img/과일.png" class="img-fluid" alt="과일" />
+            <a href="/category/fruit">
+              <img src="/img/과일.png" class="img-fluid" alt="과일" />
+            </a>
           </div>
         </div>
       </div>
@@ -181,7 +185,9 @@
             <h4 class="my-0 fw-normal">채소</h4>
           </div>
           <div class="card-body">
-            <img src="/img/채소.png" class="img-fluid" alt="채소" />
+            <a href="/category/vegetable">
+              <img src="/img/채소.png" class="img-fluid" alt="채소" />
+            </a>
           </div>
         </div>
       </div>
@@ -191,7 +197,9 @@
             <h4 class="my-0 fw-normal">정육</h4>
           </div>
           <div class="card-body">
-            <img src="/img/정육.png" class="img-fluid" alt="정육" />
+            <a href="/category/meat">
+              <img src="/img/정육.png" class="img-fluid" alt="정육" />
+            </a>
           </div>
         </div>
       </div>
@@ -201,7 +209,9 @@
             <h4 class="my-0 fw-normal">수산</h4>
           </div>
           <div class="card-body">
-            <img src="/img/수산.png" class="img-fluid" alt="수산물" />
+            <a href="/category/fish">
+              <img src="/img/수산.png" class="img-fluid" alt="수산물" />
+            </a>
           </div>
         </div>
       </div>
@@ -215,7 +225,9 @@
             <h4 class="my-0 fw-normal">음료</h4>
           </div>
           <div class="card-body">
-            <img src="/img/음료.png" class="img-fluid" alt="음료" />
+            <a href="/category/drink">
+              <img src="/img/음료.png" class="img-fluid" alt="음료" />
+            </a>
           </div>
         </div>
       </div>
@@ -225,7 +237,9 @@
             <h4 class="my-0 fw-normal">스낵</h4>
           </div>
           <div class="card-body">
-            <img src="/img/스낵.png" class="img-fluid" alt="과자" />
+            <a href="/category/snack">
+              <img src="/img/스낵.png" class="img-fluid" alt="과자" />
+            </a>
           </div>
         </div>
       </div>
@@ -235,11 +249,13 @@
             <h4 class="my-0 fw-normal">냉장/냉동식품</h4>
           </div>
           <div class="card-body">
-            <img
-              src="/img/냉장냉동.png"
-              class="img-fluid"
-              alt="냉장/냉동식품"
-            />
+            <a href="/category/frozen">
+              <img
+                src="/img/냉장냉동.png"
+                class="img-fluid"
+                alt="냉장/냉동식품"
+              />
+            </a>
           </div>
         </div>
       </div>
@@ -249,7 +265,9 @@
             <h4 class="my-0 fw-normal">즉석식품</h4>
           </div>
           <div class="card-body">
-            <img src="/img/즉석.png" class="img-fluid" alt="즉석식품" />
+            <a href="/category/instant">
+              <img src="/img/즉석.png" class="img-fluid" alt="즉석식품" />
+            </a>
           </div>
         </div>
       </div>
