--- a/src/views/main.ejs
+++ b/src/views/main.ejs
@@ -83,8 +83,8 @@
               placeholder="Search"
               aria-label="Search"
             />
-            <button class="btn btn-outline-success" type="submit">
-              Search
+            <button class="btn btn-outline-success" href="/goods/detail" type="submit">
+              검색
             </button>
           </form>
         </div>
