상세정보 1차 완성

--- a/src/views/detail.ejs
+++ b/src/views/detail.ejs
@@ -30,7 +30,6 @@
 
     </style>
     <script src="/js/home/detail.js" defer></script>
-
 </head>
 
 <body>
@@ -49,7 +48,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <form class="d-flex">
                         <input id="search" class="form-control me-2" style="right: 50px;"  type="search" placeholder="찾고싶은 상품을 검색해보세요!" aria-label="Search">
-                        <button id="BtnSearch" class="btn btn-outline-success" type="submit">검색</button>
+                        <p id="BtnSearch" class="btn btn-outline-success" type="submit">검색</p>
                     </form>
                     <div class="navbar-nav">
                         <a id="BtnLogin" class="nav-link" href="#">로그인</a>
