--- a/src/views/search.ejs
+++ b/src/views/search.ejs
@@ -28,8 +28,8 @@
             width: 50%;
         }
 
-        .list-group{
-            margin: auto;
+        .card{ /* 상 우 좌 하 */
+            margin: 2em auto;
             width: 50%;
         }
 
@@ -45,7 +45,7 @@
                          alt="" width="60" height="60"
                          class="d-inline-block align-text-top">
                 </a>
-                <a class="navbar-brand" href="#">그냥 담아</a>
+                <a class="navbar-brand" href="/">그냥 담아</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -56,7 +56,7 @@
                         <input id="BtnSearch" class="btn btn-outline-success" type="submit"></p>
                     </form>
                     <div class="navbar-nav">
-                        <a id="BtnLogin" class="nav-link" href="#">로그인</a>
+                        <a id="BtnLogin" class="nav-link" href="/user/login">로그인</a>
                         <a id="BtnMypage" class="nav-link" href="#">마이페이지</a>
                         <a id="BtnCheckList" class="nav-link" href="#">체크리스트</a>
                     </div>
@@ -64,16 +64,15 @@
             </div>
         </nav>
 
-        <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
-                <img src= <%= Image %> class="img-thumbnail" alt="Card image cap" width="250" height="150">
-                <div class="d-flex w-100 justify-content-between">
-                    <h5 class="mb-1"><%= Name %></h5>
-                    <small><%= Price %> 원</small>
-                </div>
-                <p class="mb-1"><%= Desc %></p>
-                <small><%= Location %></small>
-            </a>
+        <div class="card" style="width: 25rem;">
+            <img src= <%= Image %> class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"><%= Name %></h5>
+              <small><%= Price %> 원</small>
+              <small><%= Location %></small>
+              <p class="card-text"><%= Desc %></p>
+              <a href="#" class="btn btn-primary">체크리스트에 담기</a>
+            </div>
         </div>
 </body>
 
