--- a/src/views/detail.ejs
+++ b/src/views/detail.ejs
@@ -51,9 +51,9 @@
                         <input id="BtnSearch" class="btn btn-outline-success" type="submit"></p>
                     </form>
                     <div class="navbar-nav">
-                        <a id="BtnLogin" class="nav-link" href="#">로그인</a>
+                        <a id="BtnLogin" class="nav-link" href="/user/login">로그인</a>
                         <a id="BtnMypage" class="nav-link" href="#">마이페이지</a>
-                        <a id="BtnCheckList" class="nav-link" href="#">체크리스트</a>
+                        <a id="BtnCheckList" class="nav-link" href="/goods/checklist">체크리스트</a>
                     </div>
                 </div>
             </div>
