--- a/src/views/main.ejs
+++ b/src/views/main.ejs
@@ -41,7 +41,7 @@
 
             <!-- 체크리스트 버튼 -->
             <li class="nav-item">
-              <a class="nav-link" href="#">CheckList</a>
+              <a class="nav-link" href="/goods/checklist">CheckList</a>
             </li>
 
             <!-- 마이페이지 버튼 -->
